# streaming-teradata-lakehouse

./: .dockerignore  .env.example  CLAUDE.md  README.md  agents.md  done-tasks.md  pyproject.toml
airflow/dags/: crypto_pipeline.py
dashboard/: app.py
docker/: Dockerfile  Dockerfile.airflow  Dockerfile.hive-metastore  compose.airflow.yml  compose.yml  hive-site.xml
src/crypto_pipeline/: _cli.py  config.py
src/crypto_pipeline/consumer/: main.py  writer_parquet.py
src/crypto_pipeline/producer/: main.py
src/crypto_pipeline/storage/: layout.py
warehouse/dbt/: profiles.yml
warehouse/dbt/crypto_dbt/: dbt_project.yml
warehouse/dbt/crypto_dbt/macros/: generate_schema_name.sql
warehouse/dbt/crypto_dbt/models/marts/: fct_candles_1m.sql  fct_ingestion_latency_1m.sql  fct_orderflow_1m.sql  fct_pipeline_health_5m.sql  fct_trades_1m.sql
warehouse/dbt/crypto_dbt/models/staging/: sources.yml  stg_trades.sql
warehouse/teradata/: init.sql  nos_foreign_table.sql
